Se termino la validacion de datos de los donativos.

--- a/app/src/main/res/layout/activity_donativo.xml
+++ b/app/src/main/res/layout/activity_donativo.xml
@@ -48,6 +48,7 @@
         android:ems="10"
         android:hint="@string/nombre"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -68,6 +69,7 @@
         android:ems="10"
         android:hint="@string/primer_ap"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -89,6 +91,7 @@
         android:ems="10"
         android:hint="@string/segundo_ap"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -110,6 +113,7 @@
         android:ems="10"
         android:hint="@string/telefono"
         android:inputType="phone"
+        android:maxLength="10"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -131,6 +135,7 @@
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
