--- a/app/src/main/res/layout/activity_donativo3.xml
+++ b/app/src/main/res/layout/activity_donativo3.xml
@@ -83,6 +83,7 @@
         android:ems="10"
         android:hint="@string/numero_tarjeta"
         android:inputType="phone"
+        android:maxLength="16"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -104,6 +105,7 @@
         android:ems="10"
         android:hint="@string/cantidad_a_donar"
         android:inputType="phone"
+        android:maxLength="7"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -126,6 +128,7 @@
         android:ems="10"
         android:hint="@string/Vencimiento"
         android:inputType="phone"
+        android:maxLength="5"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
