--- a/app/src/main/res/layout/activity_donativo2.xml
+++ b/app/src/main/res/layout/activity_donativo2.xml
@@ -67,6 +67,7 @@
         android:ems="10"
         android:hint="@string/calle"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -87,6 +88,7 @@
         android:ems="10"
         android:hint="@string/colonia"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -108,6 +110,7 @@
         android:ems="10"
         android:hint="@string/municipio"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
@@ -129,6 +132,7 @@
         android:ems="10"
         android:hint="@string/cp"
         android:inputType="phone"
+        android:maxLength="5"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="@color/white"
