--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,7 @@
         android:ems="10"
         android:hint="@string/nombre_usuario"
         android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:textColor="@color/white"
@@ -85,6 +86,7 @@
         android:ems="10"
         android:hint="@string/contraseña"
         android:inputType="textPassword"
+        android:maxLength="50"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:textColor="@color/white"
@@ -103,6 +105,7 @@
         android:layout_marginEnd="40dp"
         android:background="@drawable/borde_boton_login"
         android:backgroundTint="#9600FF"
+        android:onClick="iniciarSesion"
         android:text="@string/iniciar_sesion"
         android:textColor="@color/white"
         android:textSize="20sp"
