--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_home"
+            android:title="Inicio"
+            android:icon="@drawable/ic_home_icon"/>
         <item
             android:id="@+id/nav_donativos"
             android:title="Donativos"
-            android:icon="@drawable/ic_donativos"
-            app:showAsAction="never"/>
+            android:icon="@drawable/ic_donativos"/>
         <item
             android:id="@+id/nav_usuarios"
             android:title="Usuarios"
             android:icon="@drawable/ic_usuarios" />
         <item
-            android:id="@+id/nav_salir"
-            android:title="Salir"
-            android:icon="@drawable/ic_salir" />
+            android:id="@+id/configuration_section"
+            android:title="Configuracion">
+            <menu>
+                <item
+                    android:id="@+id/nav_salir"
+                    android:title="Salir"
+                    android:icon="@drawable/ic_salir" />
+            </menu>
+        </item>
     </group>
 
 </menu>
