--- a/app/src/main/res/layout/section_fragment_usuarios.xml
+++ b/app/src/main/res/layout/section_fragment_usuarios.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,9 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <EditText
@@ -23,11 +23,11 @@
             android:background="@drawable/borde_cajas_donativo"
             android:ems="10"
             android:hint="@string/nombre_usuario"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
             android:imeOptions="actionNext"
             android:inputType="text"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp" />
 
         <ImageButton
             android:id="@+id/btn_buscar_usuario"
@@ -48,25 +48,18 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_usuarios"
         android:layout_width="match_parent"
-        android:layout_height="580dp" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="end|center"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="vertical">
+        android:layout_marginTop="80dp"/>
 
-        <ImageButton
-            android:id="@+id/button_AgregarUsuario"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/borde_add"
-            android:contentDescription="boton de agregar"
-            android:src="@drawable/ic_add" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_Add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"
+        android:contentDescription="boton de agregar"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="@color/morado_launch" />
 
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
