Interfaces de usuarios completas (antes de apis).

--- a/app/src/main/res/layout/section_fragment_agregar_usuario.xml
+++ b/app/src/main/res/layout/section_fragment_agregar_usuario.xml
@@ -14,6 +14,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/borde_cajas_donativo"
+        android:drawableStart="@drawable/person_icon"
+        android:drawablePadding="20dp"
         android:ems="10"
         android:hint="@string/nombre_usuario"
         android:inputType="textPersonName"
@@ -30,6 +32,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/borde_cajas_donativo"
+        android:drawableStart="@drawable/ic_mail"
+        android:drawablePadding="20dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textPersonName"
@@ -46,6 +50,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/borde_cajas_donativo"
+        android:drawableStart="@drawable/lock_icon"
+        android:drawablePadding="20dp"
         android:ems="10"
         android:hint="@string/contraseña"
         android:inputType="textPassword"
@@ -62,6 +68,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/borde_cajas_donativo"
+        android:drawableStart="@drawable/lock_icon"
+        android:drawablePadding="20dp"
         android:ems="10"
         android:hint="Verificar Contraseña"
         android:inputType="textPassword"
