--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="210dp"
     android:background="@drawable/fondo_donativo"
@@ -15,7 +16,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:scaleType="centerCrop"
         android:src="@drawable/perfil1"
         app:border_color="@android:color/white"
@@ -26,8 +27,8 @@
         android:id="@+id/msj_bienvenida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:text="Cristofer Casas Murillo"
+        android:layout_marginStart="5dp"
+        android:text="@string/cristofer_casas_murillo"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textStyle="bold" />
 
@@ -37,9 +38,10 @@
         style="@style/Widget.AppCompat.Spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:minHeight="48dp"
-        android:text="cristofer32513@gmail.com"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="@string/cristofer32513_gmail_com"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:ignore="TextContrastCheck" />
 
 </LinearLayout>
