--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:title="Inicio"
+            android:title="@string/menu_item_inicio"
             android:icon="@drawable/ic_home_icon"/>
         <item
             android:id="@+id/nav_donativos"
-            android:title="Donativos"
+            android:title="@string/menu_item_donativos"
             android:icon="@drawable/ic_donativos"/>
         <item
             android:id="@+id/nav_usuarios"
-            android:title="Usuarios"
+            android:title="@string/menu_item_usuarios"
             android:icon="@drawable/ic_usuarios" />
         <item
             android:id="@+id/configuration_section"
-            android:title="Configuracion">
+            android:title="@string/menu_item_configuracion">
             <menu>
                 <item
                     android:id="@+id/nav_salir"
-                    android:title="Salir"
+                    android:title="@string/menu_item_salir"
                     android:icon="@drawable/ic_salir" />
             </menu>
         </item>
