Preparacion de los fragments para utilizar Volley.

--- a/app/src/main/res/layout/section_fragment_donaciones.xml
+++ b/app/src/main/res/layout/section_fragment_donaciones.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,19 +20,20 @@
             android:layout_marginEnd="20dp"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:text="Buscar por:"
+            android:text="@string/buscar_por"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:ignore="TextContrastCheck" />
 
         <Spinner
             android:id="@+id/spinner_BuscarDonativo"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/borde_cajas_donativo"
-            android:contentDescription="spinner busqueda donativo"
+            android:contentDescription="@string/spinner_busqueda_donativo"
             android:entries="@array/spiner_buscar_donativo"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
