--- a/app/src/main/res/layout/section_fragment_home.xml
+++ b/app/src/main/res/layout/section_fragment_home.xml
@@ -5,13 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="vertical"
     tools:ignore="UseCompoundDrawables">
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/colecta"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:layout_marginBottom="20dp"
+        android:textSize="34sp" />
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/universidad_beta"
